--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="keywords"
+      content="Statistical Calculator, Correlation Coefficient, Mean Calculation, Sum Calculation, Coefficient of Determination, Statistics Tool"
+    />
+    <meta name="author" content="Zeo" />
+    <meta
+      name="description"
+      content="A simple statistical calculator built with React for learning purposes. Calculate mean, sum, correlation coefficient, and coefficient of determination based on your input data sets."
+    />
+    <title>Coefficient correlaction calc</title>
   </head>
   <body>
     <div id="root"></div>
